# src/database/swagger.yaml
@@ -46,25 +46,25 @@ paths:
       responses:
         "200":
           description: get all users
-    # /login:
-    #   post:
-    #     tags:
-    #       - User
-    #     requestBody:
-    #       description: user login request
-    #       required: true
-    #       content:
-    #         application/json:
-    #           schema:
-    #             type: "object"
-    #             properties:
-    #               email:
-    #                 type: string
-    #               password:
-    #                 type: string
-    #     responses:
-    #       "201":
-    #         description: user login successfully
+    /login:
+      post:
+        tags:
+          - User
+        requestBody:
+          description: user login request
+          required: true
+          content:
+            application/json:
+              schema:
+                type: "object"
+                properties:
+                  email:
+                    type: string
+                  password:
+                    type: string
+        responses:
+          "201":
+            description: user login successfully
     # /users/empty:
     # delete:
     # tags:
@@ -99,10 +99,38 @@ paths:
       responses:
         "201":
           description: new movie
-  /movies:
+  /allMovies:
     get:
       tags:
         - Movie
       responses:
         "200":
           description: get all movies
+  /addCategory:
+    post:
+      tags:
+        - MovieCategory
+      requestBody:
+        description: add the new category
+        required: true
+        content:
+          application/json:
+            schema:
+              type: "object"
+              properties:
+                trending:
+                  type: boolean
+                recommended:
+                  type: boolean
+                tvSeries:
+                  type: boolean
+      responses:
+        "201":
+          description: new movie
+  /allCategories:
+    get:
+      tags:
+        - MovieCategory
+      responses:
+        "200":
+          description: get all categories
