# src/routes/categories-routes.js
@@ -1,0 +1,13 @@
+import express from "express";
+import {
+  addCategory,
+  getAllCategories,
+} from "../controllers/categories-controller.js";
+
+const categoriesRouter = express.Router();
+categoriesRouter.get("/allCategories", getAllCategories);
+categoriesRouter.post("/addCategory", addCategory);
+// usersRouter.post("/login", login);
+// usersRouter.delete("/users/empty", emptyTable);
+
+export default categoriesRouter;
